--- a/main.scss
+++ b/main.scss
@@ -2,6 +2,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  text-decoration: none;
 }
 .Container {
   width: 100%;
@@ -53,8 +54,6 @@
             border-radius: 5px;
             color: white;
             border: none;
-
-           
           }
         }
       }
@@ -64,7 +63,7 @@
         align-items: center;
         gap: 20px;
         font-size: 16px;
-        p{
+        p {
           font-size: 15px;
         }
         i {
@@ -105,7 +104,7 @@
           border: 1px solid;
           cursor: pointer;
 
-          &:hover{
+          &:hover {
             background-color: rgba(237, 154, 182, 0.516);
           }
         }
@@ -132,110 +131,110 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
-
-        .box {
-          width: 300px;
-          height: 380px;
-          border: 1px solid rgba(128, 128, 128, 0.587);
-          display: flex;
-          flex-direction: column;
-          justify-content: space-between;
-          margin-top: 20px;
-          text-align: center;
-          border-radius: 8px;
-          overflow: hidden;
-          &:hover{
-            .img{
-              cursor: pointer;
-              img{
-                transform: scale(1.08);
-                transition: .5s;
-              }
-            }
-          }
-          
-          .img {
-            width: 100%;
-            height: 80%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            img {
-              width: 100%;
-              height: 100%;
-              border-radius: 10px;
-            }
-          }
-          .text{
-            height: 20%;
+        a {
+          color: black;
+          text-decoration: none;
+          .box {
+            width: 300px;
+            height: 380px;
+            border: 1px solid rgba(128, 128, 128, 0.587);
             display: flex;
             flex-direction: column;
-            justify-content: center;
-              p{
-                color: green;
+            justify-content: space-between;
+            margin-top: 20px;
+            text-align: center;
+            border-radius: 8px;
+            overflow: hidden;
+            color: black;
+            &:hover {
+              .img {
+                cursor: pointer;
+                img {
+                  transform: scale(1.08);
+                  transition: 0.5s;
+                }
               }
+            }
+
+            .img {
+              width: 100%;
+              height: 80%;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              img {
+                width: 100%;
+                height: 100%;
+                border-radius: 10px;
+              }
+            }
+            .text {
+              height: 20%;
+              display: flex;
+              flex-direction: column;
+              justify-content: center;
+              p {
+                color: rgb(35, 142, 53);
+              }
+            }
           }
         }
       }
     }
   }
-
-  
 }
-footer{
+footer {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
   padding: 60px 70px;
   background-color: #eeecec;
-  .info{
+  .info {
     width: 100%;
     display: flex;
     justify-content: space-between;
 
-    .contact{
+    .contact {
       display: flex;
       flex-direction: column;
       gap: 15px;
 
-      p{
+      p {
         color: rgb(54, 54, 54);
-        &:nth-child(3){
+        &:nth-child(3) {
           color: black;
           font-weight: 600;
         }
       }
     }
-    .category{
+    .category {
       display: flex;
       flex-direction: column;
       gap: 15px;
 
-      p{
+      p {
         color: rgb(54, 54, 54);
-        
       }
     }
-    .links{
-      @extend .category
+    .links {
+      @extend .category;
     }
-    .comment{
+    .comment {
       @extend .category;
       width: 260px;
-      form{
+      form {
         width: 255px;
         display: flex;
         border: 1px solid gray;
         border-radius: 5px;
 
-        input{
+        input {
           padding: 5px 20px;
           outline: none;
           border: none;
           border-radius: 5px;
-
         }
-        button{
+        button {
           padding: 8px 15px;
           background-color: rgb(198, 92, 224);
           border: none;
@@ -243,7 +242,6 @@ footer{
           border-radius: 5px;
         }
       }
-
     }
   }
 }
